// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render an error or a success message if message props is empty 1`] = `<DocumentFragment />`;

exports[`does render a success message 1`] = `
<DocumentFragment>
  <div
    class="alert-error"
  >
    Success!!!!
  </div>
</DocumentFragment>
`;

exports[`does render an error message 1`] = `
<DocumentFragment>
  <div
    class="alert-error"
  >
    Error!
  </div>
</DocumentFragment>
`;
